--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "13.5.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-redux": "7.2.2",
-    "react-router-dom": "6.3.0",
+    "classnames": "^2.3.1",
+    "firebase": "^9.8.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "1.52.3",
-    "web-vitals": "2.1.4"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
