--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "semi": ["warn", "always"]
+    }
   },
   "browserslist": {
     "production": [
